# tasks-rs

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: args.rs  error.rs  lib.rs  main.rs  manager.rs  task.rs
