[package]
name = "tasks-rs"
version = "1.0.1"
authors = ["Danielius Vaisnoras"]
description = "A simple task list manager for the command line written in rust"
repository = "https://github.com/gamertike/tasks-rs"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["tasks", "list", "task-list", "cli"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
owo-colors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
